--- a/main/templates/seller_page.html
+++ b/main/templates/seller_page.html
@@ -3,12 +3,10 @@
 
 <div class="content">
     <div class="page" style="width: 95vw;">
-        <p style="text-align: center;">Your Sell Orders</p>
-
         <!-- Form to place a new sell order -->
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-            <h1 class="heading">Login</h1>
+            <h1 class="heading">Your Sell Orders</h1>
             <div class="form-group">
                 {{ form.unit.label(class="label") }}
 
