--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 
+<script src="static/home_page.js"></script>
+
 <div class="dashboard_container">
     <div class="dashboard">
         <div class="user_display">
@@ -12,7 +14,12 @@
 
         <div style="height: 100%; border: 2px solid white;" class="line"></div>
 
-        <div class="pie">40 Units Left<br>50%</div>
+        <div role="progressbar" aria-valuenow="{{ units_used }}" aria-valuemin="0" aria-valuemax="100" style="--value:{{ units_used }}"></div>
+
+        <div>
+            <p> {{ current_user.units }} </p>
+        </div>
+
         <div class="balance_info_cont">
             <div class="info_options">
                 <a class="button" href="{{ url_for('buyer_page') }}">Buy More</a>
