--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -14,10 +14,12 @@
 
         <div style="height: 100%; border: 2px solid white;" class="line"></div>
 
-        <div role="progressbar" aria-valuenow="{{ units_used }}" aria-valuemin="0" aria-valuemax="100" style="--value:{{ units_used }}"></div>
+        <div role="progressbar" aria-valuenow="{{ units_used }}" aria-valuemin="0" aria-valuemax="100" style="--value:{{ units_used }}">
+           {{ current_user.units }}/{{ current_user.capacity }}
+        </div>
 
         <div>
-            <p> {{ current_user.units }} </p>
+            <p style="font-size: 2rem;"> {{ current_user.units }}/{{ current_user.capacity }} Units Available </p>
         </div>
 
         <div class="balance_info_cont">
