--- a/main/templates/transaction.html
+++ b/main/templates/transaction.html
@@ -3,7 +3,7 @@
 
 <div class="content">
     <div class="page" style="width: 95vw;">
-        <p style="text-align: center;">Sellers near You</p>
+        <p style="text-align: center;">Transaction History</p>
         <!--  Have a Table View thing here  -->
         <table class="bordered">
             <thead>
