--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -3,7 +3,7 @@
 
 <div class="video-bg">
     <video id="bgVideo" preload="true" autoplay loop muted>
-        <source id="videoSource" src="static/Resources/Videos/many_panels.mp4" type="video/mp4" />
+        <source id="videoSource" src="static/Resources/Videos/bg_vid1.mp4" type="video/mp4" />
     </video>
 </div>
 
@@ -18,20 +18,16 @@
 
     <div class="help_content">
         <div class="quick_tile">
-            <a href="Help Pages\quick_start.html">
-                <img alt="Solar Energy" src="Resources/Illustrations/quick_start.svg"/>
-                <div class="bg_fade"></div>
-                <p class="title">Solar Energy</p>
-                <p class="subtitle">Solar Energy is Gud</p>
-            </a>
+            <img src="static/Resources/images/solar1.jpg"/>
+            <div class="bg_fade"></div>
+            <p class="title">Solar Energy</p>
+            <p class="subtitle">Solar Energy is Gud</p>
         </div>
         <div class="quick_tile">
-            <a href="Help Pages\lyrics_editor.html">
-                <img alt="Earn Money" src="Resources/Illustrations/Writer.svg"/>
-                <div class="bg_fade"></div>
-                <p class="title">Earn Money</p>
-                <p class="subtitle">Stonks...</p>
-            </a>
+            <img alt="Earn Money" src="static/Resources/images/profit.jpg"/>
+            <div class="bg_fade"></div>
+            <p class="title">Earn Money</p>
+            <p class="subtitle">Stonks...</p>
         </div>
         <div class="quick_tile">
             <a href="Help Pages\quick_start.html">
