--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -29,29 +29,13 @@
             <p class="title">Earn Money</p>
             <p class="subtitle">Stonks...</p>
         </div>
-        <div class="quick_tile">
-            <a href="Help Pages\quick_start.html">
-                <img alt="Solar Energy" src="Resources/Illustrations/quick_start.svg"/>
-                <div class="bg_fade"></div>
-                <p class="title">Solar Energy</p>
-                <p class="subtitle">Solar Energy is Gud</p>
-            </a>
-        </div>
-        <div class="quick_tile">
-            <a href="Help Pages\lyrics_editor.html">
-                <img alt="Earn Money" src="Resources/Illustrations/Writer.svg"/>
-                <div class="bg_fade"></div>
-                <p class="title">Earn Money</p>
-                <p class="subtitle">Stonks...</p>
-            </a>
-        </div>
     </div>
     <div class="feature_display">
         <div class="feature_desc">
             <h3>Feature Title</h3>
             <p>Desc here</p>
         </div>
-        <img alt="Lyrics Editor" src="Resources/Illustrations/Writer.svg"/>
+        <img alt="Lyrics Editor" src="static/Resources/images/SolarHouse.png"/>
     </div>
 </div>
 
