--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -26,9 +26,9 @@
 </div>
 
 <div class="footer">
-    <p>2024 &copy; Solar Pool?. All rights reserved.</p>
-    <a class="ext-links" href="https://github.com/GlaucousGlaucus/PinnacleDynamo_Help">
-        <img alt="Lyrics Editor" src="Resources/Icons/github-mark-white.svg"/>
+    <p>2024 &copy; Byte Force. All rights reserved. Lol</p>
+    <a class="ext-links" href="https://github.com/GlaucousGlaucus/SIH-Hackathon-2024">
+        <img alt="Lyrics Editor" src="static/Resources/Icons/github-mark-white.svg"/>
     </a>
 </div>
 
