--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -37,6 +37,22 @@
         </div>
         <img alt="Lyrics Editor" src="static/Resources/images/SolarHouse.png"/>
     </div>
+
+    <h1>Our Team</h1>
+
+    <div class="help_content">
+        <div class="quick_tile">
+            <div class="bg_fade"></div>
+            <p class="title">Solar Energy</p>
+            <p class="subtitle">Solar Energy is Gud</p>
+        </div>
+        <div class="quick_tile">
+            <div class="bg_fade"></div>
+            <p class="title">Earn Money</p>
+            <p class="subtitle">Stonks...</p>
+        </div>
+    </div>
+    <div style="height: 6vh;"></div>
 </div>
 
 
