--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -2,56 +2,60 @@
 {% block content %}
 <div class="dashboard_container">
     <div class="login_page">
+        <h1 class="heading">Join Us</h1>
+
+        <div>
+            {% for message in get_flashed_messages() %}
+            <div class="invalid-feedback">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-            <h1 class="heading">Join Us</h1>
-            <div class="form-group">
-                {{ form.username.label(class="label") }}
-
-                {% if form.username.errors %}
-                {{ form.username(class="input is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.username.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.username(class="input") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.password.label(class="label") }}
-                {% if form.password.errors %}
-                {{ form.password(class="input is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.password.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.password(class="input") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.confirm_password.label(class="label") }}
-                {% if form.confirm_password.errors %}
-                {{ form.confirm_password(class="input is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.confirm_password.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
-                {{ form.confirm_password(class="input") }}
-                {% endif %}
-            </div>
-
-            <div class="form-container">
+            <div style="display: flex; flex-direction: column; gap: 1rem;">
                 <div class="form-group">
-                    {{ form.submit(class="norm_btn") }}
+                    {% if form.username.errors %}
+                    {{ form.username(class="input is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.username(class="input", placeholder="Username") }}
+                    {% endif %}
                 </div>
-                <div>
-                    <a href="/login">Already Have an Account? Log In</a>
+                <div class="form-group">
+                    {% if form.password.errors %}
+                    {{ form.password(class="input is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.password.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.password(class="input", placeholder="Password") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {% if form.confirm_password.errors %}
+                    {{ form.confirm_password(class="input is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.confirm_password.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.confirm_password(class="input", placeholder="Confirm Password") }}
+                    {% endif %}
+                </div>
+            </div>
+            <div class="form-container">
+                <div class="vertical_div" style="padding-top: 20px; gap:20px;">
+                    {{ form.submit(class="button") }}
+                    <a href="/login" style="text-align:center;">Already Have an Account? Log In</a>
                 </div>
             </div>
         </form>
