--- a/main/templates/transaction.html
+++ b/main/templates/transaction.html
@@ -15,6 +15,7 @@
                 <th scope="col">Buyer ID</th>
                 <th scope="col">Units</th>
                 <th scope="col">Total Price</th>
+                <th scope="col">Date</th>
             </tr>
             </thead>
 
@@ -28,6 +29,7 @@
                     <td>{{items.row.buyer_id}}</td>
                     <td>{{items.row.units}}</td>
                     <td>{{items.row.price}}</td>
+                    <td>{{items.row.date}}</td>
                 </tr>
             {% endfor %}
             </tbody>
