--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pinnacle Dynamo: Info</title>
+    <title>Solar Chain - Byte Force</title>
     <link href="static/style.css" rel="stylesheet" type="text/css">
     <script src="static/home_page.js"></script>
     <script src="static/transaction.js"></script>
