--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -11,12 +11,32 @@
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="/home">Dashboard</a>
-            <a href="/transactions">Transactions</a>
-            <a href="/about">About</a>
+            <div class="horizontal_div" style="gap: 0rem;">
+                <a href="/home" style="display: flex; flex-direction:row;">
+                    <img src="static/Resources/Icons/home.svg" width="32" height="28">
+                    <p style="margin: 0; margin-top: 0.4rem; margin-left: 0.2rem;">Dashboard</p>
+                </a>
+            </div>
+            <div class="horizontal_div" style="gap: 0rem;">
+                <a href="/transactions" style="display: flex; flex-direction:row;">
+                    <img src="static/Resources/Icons/trans.svg" width="32" height="28">
+                    <p style="margin: 0; margin-top: 0.4rem; margin-left: 0.2rem;">Transactions</p>
+                </a>
+            </div>
+            <div class="horizontal_div" style="gap: 0rem;">
+                <a href="/about" style="display: flex; flex-direction:row;">
+                    <img src="static/Resources/Icons/info.svg" width="32" height="28">
+                    <p style="margin: 0; margin-top: 0.4rem; margin-left: 0.2rem;">About</p>
+                </a>
+            </div>
         </div>
         <div class="account-link">
-            <a href="/register">Account</a>
+            <div class="horizontal_div" style="gap: 0rem;">
+                <a href="/register" style="display: flex; flex-direction:row;">
+                    <img src="static/Resources/Icons/account.svg" width="32" height="28">
+                    <p style="margin: 0; margin-top: 0.4rem; margin-left: 0.2rem;">Account</p>
+                </a>
+            </div>
         </div>
     </div>
 </div>
