--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -3,7 +3,7 @@
 
 <div class="video-bg">
     <video id="bgVideo" preload="true" autoplay loop muted>
-        <source id="videoSource" src="static/Resources/Videos/bg_vid1.mp4" type="video/mp4" />
+        <source id="videoSource" src="static/Resources/Videos/bg_vid1.mp4" type="video/mp4"/>
     </video>
 </div>
 
@@ -22,23 +22,53 @@
             <img src="static/Resources/images/solar1.jpg"/>
             <div class="bg_fade"></div>
             <p class="title">Solar Energy</p>
-            <p class="subtitle">Solar Energy is Gud</p>
+            <p class="subtitle">Utilize renewable energy to power your home and community with our cutting-edge solar
+                technology.</p>
         </div>
         <div class="quick_tile">
             <img alt="Earn Money" src="static/Resources/images/profit.jpg"/>
             <div class="bg_fade"></div>
             <p class="title">Earn Money</p>
-            <p class="subtitle">Stonks...</p>
+            <p class="subtitle">Profit from excess energy by selling it on a secure blockchain platform. Turn your solar
+                investment into a continuous revenue stream.</p>
+        </div>
+        <div class="quick_tile">
+            <img src="static/Resources/images/env.png"/>
+            <div class="bg_fade"></div>
+            <p class="title">Protect the Environment</p>
+            <p class="subtitle">Reduce your carbon footprint and contribute to a cleaner, more sustainable planet by
+                using solar power.</p>
+        </div>
+        <div class="quick_tile">
+            <img src="static/Resources/images/community.png"/>
+            <div class="bg_fade"></div>
+            <p class="title">Empower Your Community</p>
+            <p class="subtitle">Join a network of energy sharers to strengthen your community's energy resilience and
+                independence.</p>
+        </div>
+        <div class="quick_tile">
+            <img src="static/Resources/images/SolarHouse.png"/>
+            <div class="bg_fade"></div>
+            <p class="title">Advanced<br>Technology</p>
+            <p class="subtitle">Leverage the latest in blockchain and solar technology to efficiently manage and trade
+                energy resources.</p>
         </div>
     </div>
     <div class="feature_display">
         <div class="feature_desc">
-            <h3>Feature Title</h3>
-            <p>Desc here</p>
+            <h3>Blockchain-Powered Transactions</h3>
+            <p>Experience seamless and secure transactions for buying and selling solar energy within your local
+                community. Our platform ensures transparency, security, and efficiency using blockchain technology.</p>
         </div>
-        <img alt="Lyrics Editor" src="static/Resources/images/SolarHouse.png"/>
+        <img alt="Energy Monitoring" src="static/Resources/images/blockchain.png"/>
     </div>
-
+    <div class="feature_display">
+        <img alt="Solar House" src="static/Resources/images/energy.png"/>
+        <div class="feature_desc">
+            <h3>Real-Time Energy Tracking</h3>
+            <p>Monitor your energy production and consumption in real-time with our intuitive dashboard. Stay informed about your energy usage and adjust your habits to maximize efficiency and savings.</p>
+        </div>
+    </div>
 </div>
 
 
