--- a/main/templates/checkout_page.html
+++ b/main/templates/checkout_page.html
@@ -17,7 +17,7 @@
                 {% endfor %}
             </div>
             <div>
-                <button type="submit">{{ form.submit.label }}</button>
+                <button class="button" type="submit">{{ form.submit.label }}</button>
             </div>
             <div>
                 <label>Total Price:</label>
