--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="footer">
-    <p>2024 &copy; Byte Force. All rights reserved. Lol</p>
+    <p>2024 &copy; Byte Force. All rights reserved.</p>
     <a class="ext-links" href="https://github.com/GlaucousGlaucus/SIH-Hackathon-2024">
         <img alt="Lyrics Editor" src="static/Resources/Icons/github-mark-white.svg"/>
     </a>
