algo rand connection

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -11,6 +11,7 @@
     <h1>Solar Chain</h1>
     <h2>Channel Your...Solars!</h2>
     <h2 class="h2-nline">And Save Your...Dollars!</h2>
+    <h2 class="h2-2line">we blew it...chain's broken</h2>
     <a href="/register" class="fill_button" style="margin-top: 2rem;">Get Started</a>
 </div>
 
