--- a/main/static/style.css
+++ b/main/static/style.css
@@ -484,7 +484,7 @@ body {
   left: 0;
   background-color: rgb(0, 0, 0);
   opacity: 0;
-  z-index: 1;
+
   transition: all 1s ease;
 }
 
@@ -546,6 +546,17 @@ body {
   animation: typing 3s steps(40, end);
   animation-delay: 1.2s;
   animation-fill-mode: both;
+}
+
+#grad1 .h2-2line {
+  font: normal normal bold 2vw arial;
+  color: white;
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 3s steps(40, end);
+  animation-fill-mode: both;
+  animation-delay: 2.2s;
 }
 
 /* style the search results container */
