--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Solar Chain - Byte Force</title>
+    <title>Solar Chain</title>
     <link href="static/style.css" rel="stylesheet" type="text/css">
     <script src="static/home_page.js"></script>
     <script src="static/transaction.js"></script>
@@ -46,8 +46,8 @@
 </div>
 
 <div class="footer">
-    <p>2024 &copy; Byte Force. All rights reserved.</p>
-    <a class="ext-links" href="https://github.com/GlaucousGlaucus/SIH-Hackathon-2024">
+    <p>2024 &copy; Solar Chain. All rights reserved.</p>
+    <a class="ext-links" href="https://github.com/GlaucousGlaucus/Algorand-Blockchain-Project">
         <img alt="Lyrics Editor" src="static/Resources/Icons/github-mark-white.svg"/>
     </a>
 </div>
