possible to update username and wallet addr

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -9,8 +9,8 @@
 
 <div id="grad1" style="text-align:center;">
     <h1>Solar Chain</h1>
-    <h2>Channel Your...Solars!</h2>
-    <h2 class="h2-nline">And Save Your...Dollars!</h2>
+    <h2>Channel Your Solars</h2>
+    <h2 class="h2-nline">And Save Your Dollars!</h2>
     <a href="/register" class="fill_button" style="margin-top: 2rem;">Get Started</a>
 </div>
 
