--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -6,6 +6,7 @@
     <script src="static/home_page.js"></script>
     <script src="static/transaction.js"></script>
 </head>
+{% from "_flash_messages.html" import display_messages %}
 <body>
 
 <div class="header">
